// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionPane /> it changes the toggleState when clicked 1`] = `
<div
  className="accordion open"
  onClick={[Function]}
>
  <div>
    stuff
  </div>
</div>
`;

exports[`<AccordionPane /> it changes the toggleState when clicked 2`] = `
<div
  className="accordion closed"
  onClick={[Function]}
>
  <div>
    stuff
  </div>
</div>
`;

exports[`<AccordionPane /> it renders children 1`] = `
<div
  className="accordion closed"
  onClick={[Function]}
>
  <div>
    stuff
  </div>
</div>
`;
